--- a/my-page.html
+++ b/my-page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <META NAME="Author" CONTENT="Artur Rojek">
     <title>test page</title>
     <style>
         body {
